# lolbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Faker_SCP角色卡_大魔王档案.md  IMPLEMENTATION_SUMMARY.md  LOCAL_DEV.md  Project Chimera (AI 赋能的 LoL Discord 机器人)  README.md  alembic.ini  cli分工  docker-compose.observability.yml  docker-compose.yml  generate_chinese_diagrams.py  main.py  mypy.ini  pyproject.toml  requirements.txt  riot.txt  setup.sh  start_bot_local.sh  start_worker_local.sh  test_report.md  test_scoring_algorithm.py  test_setup.py  translate_html.py  translate_html_fixed.py  乌兹角色卡_七宗罪.md  流程图  详细开发表
.github/workflows/: e2e.yml  mypy.yml  quality-gate.yml  security.yml
.prom_multiproc/: counter_45800.db  histogram_45800.db  histogram_61911.db  histogram_67054.db  histogram_77668.db
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_workflow.md  v1_2_requirements_and_status.md
alembic/: env.py
alembic/versions/: 375b918c8740_add_user_profiles_table_for_v2_2_.py
doc/: P5_TEST_CHECKLIST.md  Project Chimera (AI 赋能的 LoL Discord 机器人)  cli分工  流程图  详细开发表  项目提案
docs/: AI_EVOLUTION_RETROSPECTIVE_V1_V2.2.md  ALEMBIC_MIGRATIONS.md  BACKEND_ARCHITECTURE_AND_MAINTENANCE_GUIDE.md  BIND_FLOW.md  COMPLETE_SYSTEM_TEST_REPORT.md  COMPLETE_SYSTEM_TEST_RESULTS.md  DEPLOYMENT_E2E_CHECKLIST.md  DEVELOPMENT_GUIDE.md  DISCORD_CONFIG_SUMMARY.md  DISCORD_FRONTEND_ARCHITECTURE.md  DISCORD_FRONTEND_IMPLEMENTATION_PROMPT.md  DISCORD_FRONTEND_QUICK_START.md  DISCORD_INTEGRATION_EXAMPLE.py  DISCORD_PREVIEW_TESTING_GUIDE.md  DISCORD_VALIDATION_GUIDE.md  Discord Bot 开发：Riot API 与豆包TTS .md  FINAL_E2E_TEST_SUMMARY.md  FRONTEND_DEVELOPMENT_AND_MAINTENANCE_GUIDE.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  LOG_MANAGEMENT.md  MLOPS_MAINTENANCE_GUIDE.md  MOCK_RSO_E2E_TEST_COMPLETION.md  MOCK_RSO_SETUP.md  OHMYGPT_INTEGRATION.md  P2_CELERY_SETUP.md  P2_COMPLETION_SUMMARY.md  P2_phase_summary.md  P2_test_validation.md  P3_CLI1_INTEGRATION_CHECKLIST.md  P3_COMPLETION_SUMMARY.md  P3_FILE_INVENTORY.md  P3_HANDOFF_REPORT.md  P3_QUICK_REFERENCE.md  P3_README.md  P3_SCORING_REFERENCE.md  P4_CLI3_DELIVERABLES_SUMMARY.md  P4_CLI4_DELIVERABLES_SUMMARY.md  P4_COMPLETION_SUMMARY.md  P5_DEPLOYMENT_READY_SUMMARY.md  P5_PRODUCTION_READY_SUMMARY.md  (+54 more)
docs/reports/: MIGRATION_REPORT_2025-10-08.md  TESTING_QUICK_REFERENCE.md  TEST_RESULTS_2025-10-08.md
docs/v2.4_test_evidence/: BROWSER_E2E_TEST_RESULTS.md  E2E_TEST_RESULTS_SUMMARY.md  RIOT_ID_E2E_TEST_PLAN.md
html-docs/contents/: diagrams.html  element_index.html  navigation.html
infrastructure/postgres/: init.sql
logs/: celery.log.old
notebooks/: ddragon_integration_test.ipynb  p4_prompt_engineering.ipynb  riot_api_exploration.ipynb  v1_scoring_prototype.ipynb  v2.1_prescriptive_analysis.ipynb  v2.2_personalization.ipynb  v21_value_validation_analysis.ipynb  v2_ab_test_analysis.ipynb  v2_multi_perspective_narrative.ipynb
scripts/: README_VALIDATION.md  audit_experiment_data.py  audit_secrets.py  cleanup_all_test_bindings.py  cleanup_test_bindings.py  compare_mv5_sources.py  db_migrate_purge_or_truncate.py  ddragon_cache_probe.py  deploy_env_check.sh  load_test_team_analyze.py  mcp_demo.py  monitor_task_queue.py  quick_deploy.sh  quick_preview.py  reprocess_match.py  run_with_env.sh  start_worker.sh  test_discord_commands.py  test_discord_embed.py  test_team_analysis_preview.py  trace_queue_routing.py  voice_broadcast_healthcheck.py
scripts/debug/: check_recent_analyses.py  check_redis_queues.py  check_task_status.py  debug_target_check.py  debug_tts_response.py
scripts/maintenance/: clear_arena_all_data.py  clear_arena_cache.py
src/: __init__.py  config.py
src/adapters/: __init__.py  database.py  ddragon_adapter.py  discord_adapter.py  discord_webhook.py  gemini_adapter.py  gemini_llm.py  mock_rso_adapter.py  redis_adapter.py  riot_api.py  riot_api_enhanced.py  rso_adapter.py  rso_factory.py  tts_adapter.py  voice_broadcast_client.py
src/api/: rso_callback.py
src/config/: __init__.py  settings.py
src/contracts/: __init__.py  analysis_results.py  analysis_task.py  common.py  discord_interactions.py  events.py  match.py  riot_api.py  summoner.py  tasks.py  team_analysis.py  teamfight_paths.py  timeline.py  user_binding.py  user_preferences.py  v21_prescriptive_analysis.py  v22_user_profile.py  v23_multi_mode_analysis.py  v2_1_timeline_evidence.py  v2_team_analysis.py
src/core/: __init__.py  compliance.py  metrics.py  observability.py  ports.py  rso_port.py
src/prompts/: __init__.py  jiangli_prompt.py  system_prompts.py  v21_coaching_prescriptive.txt  v21_coaching_prescriptive_v1.1.txt  v22_coaching_casual.txt  v22_coaching_competitive.txt  v23_aram_analysis.txt  v23_arena_analysis.txt  v2_team_full_token_prompt.py  v2_team_relative_prompt.py
src/tasks/: __init__.py  analysis_tasks.py  celery_app.py  match_tasks.py  team_tasks.py
static/opgg_cache/: yasuo_middle_v2.json
tests/: __init__.py  conftest.py  test_ab_cohort_service.py  test_arena_compliance_guard.py  test_arena_contract.py  test_arena_duration.py  test_bot_commands.py  test_contracts.py  test_mock_oauth_route.py  test_paginated_team_view.py  test_team_tldr_arena_skip.py  test_tts.py  test_tts_long.py  test_v23_mode_detection.py  test_v2_json_validation.py  test_view_mode_awareness.py
tests/fixtures/: aram_timeline_sample.json  arena_timeline_sample.json
tests/integration/: test_bot_startup.py  test_callbacks_auth.py  test_complete_integration.py  test_discord_webhook_adapter.py  test_e2e_match_analysis.py  test_jiangli_command.py  test_mock_rso.py  test_mode_aware_ui_rendering.py  test_ohmygpt.py  test_riot_flow.py  test_riot_simple.py  test_setup.py  test_smart_error_messaging.py  test_strategy_v1_lite.py  test_user_binding_service.py  test_webhook_delivery_e2e.py
tests/unit/: test_analysis_guard.py  test_analysis_view_cc_duration.py  test_analysis_view_unified_style.py  test_analysis_view_unify_style.py  test_arena_augments.py  test_scoring.py  (+25 more)
(+82 files in other folders)
